[gd_scene load_steps=7 format=3 uid="uid://dmrux2mb6darp"]

[ext_resource type="Script" uid="uid://c00ahcf3jgkll" path="res://game/minigames/SwipeClicker/swipe_clicker.gd" id="1_y8ab6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y8ab6"]
bg_color = Color(0.14767182, 0.14767182, 0.14767176, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hra2q"]
bg_color = Color(0.89411765, 0.7882353, 0.28235295, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xkb1i"]
bg_color = Color(0.11764706, 0.4862745, 0.23529412, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_66ugx"]
bg_color = Color(0.851769, 0.851769, 0.8517688, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rhcud"]
bg_color = Color(0.23450708, 0.0069233347, 0.10217639, 1)

[node name="SwipeClicker" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -200.0
offset_bottom = -450.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y8ab6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.24840015, 0.24840018, 0.24840015, 1)

[node name="GameUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="GameUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="lbl_score" type="Label" parent="GameUI/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "Score"
horizontal_alignment = 1

[node name="back" type="Panel" parent="GameUI/MarginContainer"]
custom_minimum_size = Vector2(400, 44)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_y8ab6")

[node name="med" type="Panel" parent="GameUI/MarginContainer/back"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35000002
anchor_top = 0.5
anchor_right = 0.65000004
anchor_bottom = 0.5
offset_left = -1.5258789e-05
offset_top = -20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hra2q")
metadata/_edit_use_anchors_ = true

[node name="good" type="Panel" parent="GameUI/MarginContainer/back"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.425
anchor_top = 0.5
anchor_right = 0.57500005
anchor_bottom = 0.5
offset_top = -20.0
offset_right = -1.5258789e-05
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xkb1i")
metadata/_edit_use_anchors_ = true

[node name="cursor" type="Panel" parent="GameUI/MarginContainer/back"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -20.0
offset_right = 5.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_66ugx")

[node name="bar_time" type="ProgressBar" parent="GameUI/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_styles/fill = SubResource("StyleBoxFlat_rhcud")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Label" type="Label" parent="GameUI/MarginContainer/bar_time"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Time"

[node name="StartUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="StartUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="StartUI/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="lbl_start" type="RichTextLabel" parent="StartUI/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
text = "Her is some Text"
fit_content = true

[node name="bt_start" type="Button" parent="StartUI/CenterContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Begin"

[connection signal="gui_input" from="GameUI/MarginContainer" to="." method="_on_game_gui_input"]
[connection signal="pressed" from="StartUI/CenterContainer/VBoxContainer/bt_start" to="." method="_on_bt_start_pressed"]
